[project]
name = "rubiks-cube-exploration"
version = "0.1.0"
description = "Exploring Rubik's Cube mathematics and algorithms"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
